--- a/Aula01.html
+++ b/Aula01.html
@@ -7,8 +7,12 @@
     <title>Primeiro HTML</title>
 </head>
 <body>
- 
- OLÁoi    
-
+  <div class="conteudo">
+    aula de programaçao de aplicativos
+    <hr>
+    estamos iniciando nosso site  
+    <br>
+<img src="borboleta.gif" width="150px">
+ </div>
 </body>
 </html>
